# mailvault

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  SUPPORT.md  config.example.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-pypi.yml  release.yml
docs/: ARCHITECTURE.md  ARCHIVE_FORMAT.md  BRAND.md  CLI_REFERENCE.md  CONFIGURATION.md  DATA_MODEL.md  DEVELOPMENT.md  GETTING_STARTED.md  OPERATIONS.md  PROCUREMENT_READINESS.md  PROVIDERS.md  README.fa.md  REFERENCES.md  REPOSITORY_SETUP.md  RESUMABLE_VIEWS.md  ROADMAP.md  SECURITY_MODEL.md  TROUBLESHOOTING.md
docs/adr/: 0001-canonical-raw-eml.md  0002-separate-message-occurrence.md  0003-content-addressed-blobs.md
docs/releases/: v2.0.6.md
examples/: domain-imap.toml  gmail.toml
scripts/: quality.py  release_check.py  setup.ps1  setup.sh  sync-gmail.ps1  sync-gmail.sh
src/firexcore_mailvault/: __init__.py  __main__.py  atomic.py  cli.py  config.py  errors.py  exporter.py  filename.py  gmail_audit.py  html_text.py  lock.py  logging_setup.py  metadata.py  mime_detect.py  mime_parser.py  models.py  participants.py  paths.py  repository.py  retry.py  serialization.py  subject.py  sync_engine.py  throttling.py  unicode_safety.py  verifier.py  view_exporter.py
src/firexcore_mailvault/archive/: __init__.py  object_store.py
src/firexcore_mailvault/procurement/: __init__.py  manifest.py
src/firexcore_mailvault/protocols/: __init__.py
src/firexcore_mailvault/protocols/imap/: __init__.py  capabilities.py  gateway.py
src/firexcore_mailvault/providers/: __init__.py  base.py  factory.py  generic.py  gmail.py
tests/: conftest.py  test_capabilities.py  test_gmail_audit.py  test_mime_parser.py  test_procurement_manifest.py  test_providers.py  test_repository.py  test_sync_engine.py  test_unicode_safety.py  test_version.py  test_view_exporter.py
