[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "firexcore-mailvault"
version = "2.0.5"
description = "Provider-neutral, read-only, evidence-preserving email archival for analytics, eDiscovery, and procurement intelligence."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Farbod Akvan" }]
keywords = [
  "imap",
  "email",
  "email-archive",
  "backup",
  "evidence",
  "ediscovery",
  "procurement",
  "gmail",
  "sqlite",
  "sha256",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
  "Topic :: Security",
  "Topic :: System :: Archiving :: Backup",
  "Typing :: Typed",
]
dependencies = [
  "imapclient>=3.1,<4",
  "typer>=0.26,<1",
  "rich>=15,<16",
  "filelock>=3.29,<4",
]

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "mypy>=2.2,<3",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
  "twine>=6.2,<7",
]

[project.urls]
Homepage = "https://github.com/FireXCore/mailvault"
Documentation = "https://github.com/FireXCore/mailvault/tree/main/docs"
Repository = "https://github.com/FireXCore/mailvault"
Issues = "https://github.com/FireXCore/mailvault/issues"
Changelog = "https://github.com/FireXCore/mailvault/blob/main/CHANGELOG.md"
Security = "https://github.com/FireXCore/mailvault/security/policy"

[project.scripts]
mailvault = "firexcore_mailvault.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firexcore_mailvault = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["firexcore_mailvault"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 55
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF", "PL"]
ignore = ["E501", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["firexcore_mailvault"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["imapclient", "imapclient.*"]
ignore_missing_imports = true
